<resources>
    <string name="app_name">Натком</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="error">Ошибка</string>
    <string name="empty_fields">Пустые поля</string>
    <string name="search">Поиск</string>
    <string name="close">Завершить</string>
    <string name="shift">Перенести</string>
    <string name="deny">Отклонить</string>
    <string name="contract">Договор заключен</string>
    <string name="mount">Монтаж назначен</string>
    <string name="comment">Комментарий</string>
    <string name="date">Дата</string>
    <string name="mount_date">Дата монтажа</string>
    <string name="picture">Замерочный лист</string>
    <string name="save">Сохранить</string>
    <string name="deny_lead">Отклонить замер</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="deny_success">Замер отклонен</string>
    <string name="lead">Замер</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="assign">Назначить?</string>
    <string name="assign_success">Назначение успешно</string>
    <string name="close_lead">Завершить замер</string>
    <string name="post_success">Картинка загружена</string>
    <string name="close_success">Замер завершен</string>
    <string name="shift_lead">Перенести замер</string>
    <string name="shift_success">Перенос завершен</string>
    <string name="empty_list">Список пуст</string>
    <string name="sure">Уверен?</string>
    <string name="need_contract">Необходимо заключить договор</string>
    <string name="pictures">Картинки</string>
    <string name="login">Авторизация</string>
    <string name="R.string.picture_list">Картинки</string>
    <string name="leadSum">Сумма</string>
    <string name="prepay">Предоплата</string>
    <string name="cashless">Безнал</string>
</resources>
