<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <CheckBox
        android:id="@+id/contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contract" />

    <CheckBox
        android:id="@+id/mount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mount" />

    <EditText
        android:id="@+id/leadSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/leadSum" />

    <EditText
        android:id="@+id/prepay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/prepay" />
    <CheckBox
        android:id="@+id/cashless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cashless" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/mount_date"
        android:inputType="date" />

    <Button
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>